footer alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,9 @@
 .footer{
   grid-template-columns: 1fr 0.5fr 0.5fr;
 }
+
+@media (max-width: 768px) {
+  .footer{
+    grid-template-columns: 1fr;
+  }
+}
